fixed gap

--- a/src/styles/_contactStyle.scss
+++ b/src/styles/_contactStyle.scss
@@ -356,7 +356,7 @@ top: 1851px;
 
 @media only screen and (max-width: 1199px) {
   .footer {
-    top: 2253px;
+    top: 2251px;
     // bottom: -66.9em;
     // width: 95%;
     
