--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -426,7 +426,7 @@
 
 @media only screen and (max-width: 1199px) {
   .footer {
-    top: 2253px;
+    top: 2251px;
   }
 }
 
